--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Форум проектов</title>
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/bootstrap.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/bootstrap.js"></script>
 </head>
 <body>
 <section class="hat">
     <div class="container">
         <div class="row">
-            <div class="col-md-2">
-                <img class="hat-logo" src="../img/fp-logo.png" alt="Форум проектов">
+            <div class="col-xl-2 col-md-2">
+                <img class="hat-logo" src="img/fp-logo.png" alt="Форум проектов">
             </div>
-            <div class="hat-link-block offset-md-1 col-md-4">
+            <div class="hat-link-block offset-xl-1 col-xl-4 offset-md-1 col-md-4">
                 <a class="hat-link" href="#">О нас</a>
                 <a class="hat-link" href="#">Проекты</a>
                 <a class="hat-link" href="#">Форум</a>
                 <a class="hat-link" href="#">Участники</a>
             </div>
-            <div class="offset-md-1 col-md-4">
+            <div class="offset-xl-1 col-xl-4 offset-md-0 col-md-5">
                 <button class="btn button-1 hat-btn">ВОЙТИ</button>
                 <button class="btn button-1 hat-btn">РЕГИСТРАЦИЯ</button>
             </div>
@@ -38,10 +38,10 @@
 <section class="main">
     <div class="container">
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-xl-2 col-md-2">
                 <img class="main-logo" src="img/fp-avatar.png" alt="Форум проектов">
             </div>
-            <div class="col-md-10">
+            <div class="offset-xl-0 col-xl-10 offset-md-1 col-md-9">
                 <img class="main-star" src="img/star.png" alt="Звезда">
                 <h4>ПОИСК ИДЕЙ И ЛЮДЕЙ</h4>
                 <h1>ПРОЕКТНАЯ ДЕЯТЕНОСТЬ <br>В НГУ</h1>
@@ -52,13 +52,13 @@
     <div class="container">
         <h5>* Худший способ создания проекта: сначала сделать - потом подумать</h5>
         <div class="row idea-wrap">
-            <div class="offset-md-1 col-md-5 idea-block">
+            <div class="offset-xl-1 col-xl-5 idea-block">
                 <button class="btn button-1 idea-btn">ФОРУМ ИДЕЙ</button>
                 <h4>Перед началом реализации необходимо разобраться <br>
                     с главной составляющей проекта - идеей. <br>
                     С этим помогут обсуждения в теме Форум идей</h4>
             </div>
-            <div class="offset-md-1 col-md-5 idea-block">
+            <div class="offset-xl-1 col-xl-5 idea-block">
                 <button class="btn button-1 idea-btn">СИСТЕМА ФИЛЬТРОВ</button>
                 <h4>На сайте присутсвтует система карточек, где кратко расписаны <br>
                     основные преимущества человека/проекта. Так же это дает <br>
@@ -71,7 +71,7 @@
     <div class="container">
         <div class="row">
             <h2 class="suitable-header">Для кого подходит этот сайт?</h2>
-            <div class="col-md-6">
+            <div class="col-xl-6">
                 <div class="accordion" id="accordionPanelsStayOpen">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
@@ -123,7 +123,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-xl-6">
                 <img class="suitable-bg" src="img/grey-bg.png" alt="Серый фон">
             </div>
         </div>
@@ -133,11 +133,11 @@
     <div class="container">
         <div class="row">
             <h2 class="card-header">Заполнение личной карточки участника</h2>
-            <div class="col-md-6">
+            <div class="col-xl-6">
                 <h3>Шаблон заполнения карточки участника</h3>
                 <img class="card-img-template" src="img/grey-bg.png" alt="Карточка Участника Шаблон">
             </div>
-            <div class="col-md-6">
+            <div class="col-xl-6">
                 <h3>Пояснения к шаблону заполнения</h3>
                 <h4>1 - место для Ваших имени и фамилии. Не обязательно писать полные имена, нужно показать, как к Вам можно обращаться. Так же из указанного имени должно однозначно восстанавливаться Ваше полное имя.<br>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a dictum velit. Mauris interdum velit dolor, sit amet tempor lacus feugiat ac. Fusce dapibus, eros vel mollis dignissim, turpis nulla pretium dui, eu tincidunt augue augue eu justo. Proin vitae augue vel magna luctus suscipit in et lectus. In odio sem, congue eget dictum sodales, euismod eu est. Vivamus id viverra tellus. Nam pharetra erat id elit tincidunt, in feugiat nisl eleifend. Nunc at porttitor dolor, a lacinia tortor. Nullam imperdiet, erat eu efficitur dignissim, eros enim pellentesque ipsum, ut venenatis enim nibh sit amet diam. Cras faucibus aliquet eros, sed mollis ante finibus sed. Praesent tempus velit in tellus euismod mollis. Praesent eget diam at felis eleifend molestie in sed sapien. Nullam libero ligula, laoreet id massa ac, tristique posuere nulla. Fusce accumsan non ligula vel rutrum. Nam eu ligula at erat luctus gravida nec ut orci. Fusce odio justo, mattis vel condimentum facilisis, eleifend commodo ante.<br>
@@ -153,11 +153,11 @@
     <div class="container">
         <div class="row">
             <h2 class="card-header">Заполнение основной карточки проекта</h2>
-            <div class="col-md-6">
+            <div class="col-xl-6">
                 <h3>Шаблон заполнения карточки проекта</h3>
                 <img class="card-img-template" src="img/grey-bg.png" alt="Карточка Участника Шаблон">
             </div>
-            <div class="col-md-6">
+            <div class="col-xl-6">
                 <h3>Пояснения к шаблону заполнения</h3>
                 <h4>1 - место для укащания названия вашего проекта. При создании уникальных продуктов советуем сделать сокращенное название(например, аббревиатуру) и только после этого указывать полное название проекта(см. пример ниже).<br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a dictum velit. Mauris interdum velit dolor, sit amet tempor lacus feugiat ac. Fusce dapibus, eros vel mollis dignissim, turpis nulla pretium dui, eu tincidunt augue augue eu justo. Proin vitae augue vel magna luctus suscipit in et lectus. In odio sem, congue eget dictum sodales, euismod eu est. Vivamus id viverra tellus. Nam pharetra erat id elit tincidunt, in feugiat nisl eleifend. Nunc at porttitor dolor, a lacinia tortor. Nullam imperdiet, erat eu efficitur dignissim, eros enim pellentesque ipsum, ut venenatis enim nibh sit amet diam. Cras faucibus aliquet eros, sed mollis ante finibus sed. Praesent tempus velit in tellus euismod mollis. Praesent eget diam at felis eleifend molestie in sed sapien. Nullam libero ligula, laoreet id massa ac, tristique posuere nulla. Fusce accumsan non ligula vel rutrum. Nam eu ligula at erat luctus gravida nec ut orci. Fusce odio justo, mattis vel condimentum facilisis, eleifend commodo ante.<br>
